<resources>
    <string name="app_name">RestoApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="QueComemos">¿Qué comemos hoy?</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="perfil">Perfil</string>
    <string name="pedidos">Pedidos</string>
    <string name="detalle">Detalle</string>
    <string name="buscar_productos">Buscar Productos</string>
    <string name="fragment_producto">Carta Digital</string>
    <string name="ver_pedido">Ver Pedido</string>
    <string name="vista_previa">Vista Previa del Pedido</string>
    <string name="detalle_pedido">Detalle y Envio</string>
    <string name="solicitar_envio">Solicitar Envio</string>
</resources>